--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           PASOS</a>
       </div>
       <div class="button">
-        <a href="https://github.com/mxabierto/playbook#readme"
+        <a href="https://github.com/mxabierto/guia#readme"
           title="Visit Github to Improve This Content">AYUDA A MEJORAR
         ESTE CONTENIDO</a>
       </div>
