Add view more button for each play

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
       <h2>{{ play.title }}</h2>
 
       {{ play.output }}
+
+      <p>
+        <a class="more" href="paso-{{ play.id }}" title="Conoce más">Conoce más</a>
+      </p>
     </div>
   {% endfor %}
 </div>
