--- a/index.html
+++ b/index.html
@@ -16,58 +16,11 @@
 
 {% include plays_navigation.html %}
 
-<div id="introduction">
-  <div class="outer_container">
-    <div class="inner_container">
-      {% capture introduction %}{% include introduction.md %}{% endcapture %}
-      {{ introduction | markdownify }}
-      <div class="button">
-        <a href="#plays_index_anchor" title="View the Plays">VE LOS
-          PASOS</a>
-      </div>
-      <div class="button">
-        <a href="https://github.com/mxabierto/guia#readme"
-          title="Visit Github to Improve This Content">AYUDA A MEJORAR
-        ESTE CONTENIDO</a>
-      </div>
-    </div>
-  </div>
-</div>
+{% include plays_introduction.html %}
 
-<div id="plays_index">
-  <div class="outer_container">
-    <div class="inner_container">
-      <a class="anchor_offset" id="plays_index_anchor"></a>
-      <h3>PASOS PARA ABRIR DATOS</h3>
-      <div class="columns">
-        <ol>
-        {% for play in site.plays %}
-          <li><a href="#play{{ play.id }}" title="View Play {{ play.id }}">{{ play.title }}</a></li>
-        {% endfor %}
-        </ol>
-      </div>
-      <div class="button">
-        <a href="#play1" title="View the In Detail">VE EN DETALLE</a>
-      </div>
-    </div>
-  </div>
-</div>
+{% include plays_index.html %}
 
-<div id="plays" class="outer_container">
-  {% for play in site.plays %}
-    <div class="inner_container">
-      <a class="anchor_offset" id="play{{ play.id }}"></a>
-      <h5>PASO {{ play.id }}</h5>
-      <h2>{{ play.title }}</h2>
-
-      {{ play.output }}
-
-      <p>
-        <a class="more" href="paso-{{ play.id }}" title="Conoce más">Conoce más</a>
-      </p>
-    </div>
-  {% endfor %}
-</div>
+{% include plays.html %}
 
 <script src='{{site.baseurl}}/assets/js/jquery-1.11.1.min.js'></script>
 <script src='{{site.baseurl}}/assets/js/scrollspy.js'></script>
@@ -75,3 +28,4 @@
 <script id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=GSA&sub-agency=OGP"></script>
 </body>
 </html>
+
