--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 {% include plays_introduction.html %}
 
+{% include plays_index.html %}
 
 <script src='{{site.baseurl}}/assets/js/jquery-1.11.1.min.js'></script>
 <script src='{{site.baseurl}}/assets/js/scrollspy.js'></script>
